# abcds-detector

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  ABCDs_Detector (1).ipynb  ABCDs_Detector.ipynb  Dockerfile  README.md  [GitHub]_ABCD_Detector.ipynb  [GitHub]_ABCDs_Detector.ipynb  api.py  assessment_service.py  config.json  configuration.py  input_parameters.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
annotations_evaluation/: a_dynamic_start.py  a_quick_pacing.py  a_supers.py  annotations_all_features.py  annotations_generation.py  b_brand_mention_speech.py  b_brand_visuals.py  b_product_mention_speech.py  b_product_mention_text.py  b_product_visuals.py  c_overall_pacing.py  c_presence_of_people.py  c_visible_face.py  d_audio_speech_early.py  d_call_to_action.py  evaluation.py  feature_modules.py
annotations_evaluation/annotations_generation/: annotations_generation.py  shot_detection.py  text_detection.py
annotations_evaluation/features/: a_dynamic_start.py  a_quick_pacing.py  a_supers.py  b_brand_mention_speech.py  b_brand_visuals.py  b_product_mention_speech.py  b_product_mention_text.py  b_product_visuals.py  c_overall_pacing.py  c_presence_of_people.py  c_visible_face.py  d_audio_speech_early.py  d_call_to_action.py
creative_providers/: creative_provider_factory.py  creative_provider_proto.py  creative_provider_registry.py  gcs_creative_provider.py  youtube_creative_provider.py
custom_evaluation/: custom_detector.py
evaluation_processing/: process_evaluations.py
evaluation_services/: video_evaluation_service.py
fava/: FAVA.ipynb  README.md  google_pixel.json  main.py
feature_configs/: features.py
features/: a_dynamic_start.py  a_quick_pacing.py  a_supers.py  b_brand_mention_speech.py  b_brand_visuals.py  b_product_mention_speech.py  b_product_mention_text.py  b_product_visuals.py  c_overall_pacing.py  c_presence_of_people.py  c_visible_face.py  d_audio_speech_early.py  d_call_to_action.py  features.py
features_repository/: feature_configs_handler.py  full_abcd_features.py  long_form_abcd_features.py  shorts_features.py
gcp_api_services/: bigquery_api_service.py  gcs_api_service.py  gemini_api_service.py
generate_video_annotations/: face_detection.py  generate_video_annotations.py  label_detection.py  logo_detection.py  object_detection.py  people_detection.py
helpers/: annotations_helpers.py  bq_service.py  face_detection.py  generic_helpers.py  helpers.py  input_helpers.py  label_detection.py  logo_detection.py  object_detection.py  shot_detection.py  speech_detection.py  text_detection.py  utils.py  vertex_ai_service.py
llm_evaluation/: llm_all_features.py
llms_evaluation/: evaluation.py  llms_detector.py
prompts/: prompt_generator.py  prompts_generator.py
tests/: test_abcd_parameters.py  test_abcs_parameters.py
trim_videos/: trim_videos.py
utils/: utils.py
